@@ -1,3 +1,8 @@
+2004-08-30  Yann Hodique  <Yann.Hodique@lifl.fr>
+
+	* perso/timerfunctions.el:
+	initial checkin
+
 2004-08-28  Yann Hodique  <Yann.Hodique@lifl.fr>
 
 	* perso/xterm-extras.el
